// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeeEstimates renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 24,
      "justifyContent": "space-between",
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FeeInfo
      fee={10}
      label="next block"
    />
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FeeInfo
      fee={7}
      label="~ 30 min"
    />
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FeeInfo
      fee={3}
      label="~ 1 hour"
    />
  </TouchableOpacity>
</View>
`;

exports[`FeeEstimates renders correctly if overpaying 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 24,
      "justifyContent": "space-between",
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FeeInfo
      fee={10}
      isError={true}
      label="next block"
    />
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FeeInfo
      fee={7}
      label="~ 30 min"
    />
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FeeInfo
      fee={3}
      label="~ 1 hour"
    />
  </TouchableOpacity>
</View>
`;
